# Antivirus_client

./: README.md
antivirus-core/: CMakeLists.txt
antivirus-core/include/: auth.h  core_api.h  file_utils.h  ipc_events.h .h  logger.h
antivirus-core/include/scanner/: quarantine.h  scanner.h  signatures.h
antivirus-core/src/: auth.cpp  core_api.cpp  file_utils.cpp  ipc_events.cpp  logger.cpp
antivirus-core/src/scanner/: quarantine.cpp  scanner.cpp  signatures.cpp
antivirus-core/tests/: test_scanner.cpp
src-tauri/rust-wrapper/: bindings.h
windows-service/: CMakeLists.txt  service_main.cpp
windows-service/include/: auth_state.h  config_loader.h  ipc_comm.h  logger.h  network_client.h  task_router.h  updater.h
windows-service/src/: auth_state.cpp  config_loader.cpp  ipc_comm.cpp  logger.cpp  network_client.cpp  task_router.cpp  updater.cpp
